@@ -2955,7 +2955,7 @@
    && !(MEM_P (operands[0]) && MEM_P (operands[1]))
    && (!can_create_pseudo_p ()
        || (ix86_cmodel == CM_MEDIUM || ix86_cmodel == CM_LARGE)
-       || GET_CODE (operands[1]) != CONST_DOUBLE
+       || !CONST_DOUBLE_P (operands[1])
        || (optimize_function_for_size_p (cfun)
 	   && standard_sse_constant_p (operands[1])
 	   && !memory_operand (operands[0], TFmode))
@@ -3025,7 +3025,7 @@
   "!(MEM_P (operands[0]) && MEM_P (operands[1]))
    && (!can_create_pseudo_p ()
        || (ix86_cmodel == CM_MEDIUM || ix86_cmodel == CM_LARGE)
-       || GET_CODE (operands[1]) != CONST_DOUBLE
+       || !CONST_DOUBLE_P (operands[1])
        || (optimize_function_for_size_p (cfun)
 	   && standard_80387_constant_p (operands[1]) > 0
 	   && !memory_operand (operands[0], XFmode))
@@ -3079,7 +3079,7 @@
   "!(MEM_P (operands[0]) && MEM_P (operands[1]))
    && (!can_create_pseudo_p ()
        || (ix86_cmodel == CM_MEDIUM || ix86_cmodel == CM_LARGE)
-       || GET_CODE (operands[1]) != CONST_DOUBLE
+       || !CONST_DOUBLE_P (operands[1])
        || (optimize_function_for_size_p (cfun)
 	   && ((!(TARGET_SSE2 && TARGET_SSE_MATH)
 		&& standard_80387_constant_p (operands[1]) > 0)
@@ -3262,7 +3262,7 @@
   "!(MEM_P (operands[0]) && MEM_P (operands[1]))
    && (!can_create_pseudo_p ()
        || (ix86_cmodel == CM_MEDIUM || ix86_cmodel == CM_LARGE)
-       || GET_CODE (operands[1]) != CONST_DOUBLE
+       || !CONST_DOUBLE_P (operands[1])
        || (optimize_function_for_size_p (cfun)
 	   && ((!TARGET_SSE_MATH
 		&& standard_80387_constant_p (operands[1]) > 0)
@@ -3961,7 +3961,7 @@
 {
   /* ??? Needed for compress_float_constant since all fp constants
      are TARGET_LEGITIMATE_CONSTANT_P.  */
-  if (GET_CODE (operands[1]) == CONST_DOUBLE)
+  if (CONST_DOUBLE_P (operands[1]))
     {
       if ((!TARGET_SSE2 || TARGET_MIX_SSE_I387)
 	  && standard_80387_constant_p (operands[1]) > 0)
@@ -4077,7 +4077,7 @@
 {
   /* ??? Needed for compress_float_constant since all fp constants
      are TARGET_LEGITIMATE_CONSTANT_P.  */
-  if (GET_CODE (operands[1]) == CONST_DOUBLE)
+  if (CONST_DOUBLE_P (operands[1]))
     {
       if (standard_80387_constant_p (operands[1]) > 0)
 	{
